[package]
name = "rustube-cli"
version = "0.3.2"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"
description = "A CLI for rustube"
keywords = ["youtube", "download", "downloader", "video", "pytube"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/DzenanJupic/rustube"
documentation = "https://docs.rs/rustube"
include = [
    "src/**/*", "Cargo.toml",
]

[[bin]]
name = "rustube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
bitflags = "1.2.1"
chrono = { version = "0.4.19", default-features = false }
clap = "3.0.0-beta.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
mime = "0.3.16"
rustube = { path = "..", version = "0.3", features = ["download", "std"] }
tokio = { version = "1.1.1", features = ["rt-multi-thread"] }
serde = "1.0.123"
strum = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.17"
