[package]
name = "rustube-cli"
version = "0.6.0"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"
description = "A CLI for rustube"
keywords = ["youtube", "download", "downloader", "video", "pytube"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/DzenanJupic/rustube"
documentation = "https://docs.rs/rustube"
include = [
    "src/**/*", "Cargo.toml",
]

[[bin]]
name = "rustube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
bitflags = "1.3.2"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "3.0.0-rc.7", features = ["derive", "wrap_help"] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
mime = "0.3.16"
rustube = { path = "..", version = "0.6", features = ["download", "std", "callback"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "io-std"] }
serde = "1.0.130"
strum = { version = "0.22.0", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
pbr = "1.0.4"
